@@ -1,6 +1,7 @@
 Revision history for Net-Silverpeak-Orchestrator
 
 {{ $NEXT }}
+    - add application group support
 
 0.003000  2021-10-05 13:38:29+02:00 Europe/Vienna
     - add domain name application support
